# Prep

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.rust  README.md  blah.svelte  clean_recipes.json  configuration.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  nginx.conf  recipe_model.json  tailwind.config.js
certs/: cert1.pem  fullchain1.pem  privkey1.pem
database/: clean_recipes.json  recipe_model.json
database/migrations/: 20231028230543_create_recipe_table.sql  20231029180735_create_ingredients_table.sql  20231029181946_create_directions_table.sql  20231029185916_create_tags_table.sql  20231029190257_create_user_table.sql  20231029190956_create_credentials_table.sql  20231029191245_create_sessions_table.sql  20231218020526_pantry.sql  20231218022146_create_common_ingredients_table.sql  20231218180442_create_meal_plans_table.sql
migrations/: 20231028230543_create_recipe_table.sql
proxy/: nginx.conf
scripts/: build.sh  init_db.sh  seed_db.sh  spoontacular_api.js
src/: configuration.rs  lib.rs  main.rs
src/app/: clients.rs  configs.rs  generate_recipe.rs  mod.rs
src/app/action/: auth_action.rs  mod.rs  pantry_action.rs  recipe_action.rs
src/app/case/: mod.rs  register_new_user.rs  start_session_for_user.rs  update_user_email.rs
src/app/helper/: test.rs
src/app/interface/: database.rs  meal_plan.rs  mod.rs  pantry.rs  recipe.rs  recipes.rs  user.rs  users.rs
src/app/use_case/: mod.rs
src/app/util/: cookie_extractor.rs  mod.rs
src/application/: auth.rs  generate_recipe.rs  mod.rs
src/application/command/: create_recipe.rs  create_recipe_from_args.rs  insert_new_recipe.rs  login_user.rs  mod.rs  register_new_user.rs  store_user_recipe.rs
src/application/helper/: get_configuration.rs  mod.rs
src/application/interface/: database.rs  database_gateway.rs  mod.rs  recipe_repo.rs  recipes.rs  users.rs
src/application/repository/: mod.rs  recipes.rs  users.rs
src/application/service/: decode_bearer_token.rs
src/domain/: common_ingredients.rs  constants.rs  mod.rs  new_recipe.rs  open_ai.rs  recipe.rs  recipe_args.rs
src/domain/config/: database.rs  mod.rs  settings.rs
src/domain/entity/: constants.rs  meal_plan.rs  mod.rs  pantry.rs  recipe.rs  recipe_args.rs  user.rs
src/domain/model/: meal_plan.rs  mod.rs  pantry.rs  recipe.rs  user.rs
src/infra/: authentication.rs  clients.rs  database.rs  gateway.rs  mod.rs
src/web/: index.html
(+195 files in other folders)
