[package]
name = "prep"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "prep"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
dotenvy = "0.15.7"
poem = { version = "1.3.58", features = ["anyhow", "test"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
ureq = { version = "2.8.0", features = ["json"] }
uuid = { version = "1.5.0", features = ["fast-rng", "v4"] }

[dependencies.sqlx]
version="0.7.2"
features = ["mysql", "macros", "uuid", "chrono", "migrate", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1.33.0"
features = ["rt-multi-thread", "macros"]
