[package]
name = "prep"
version = "0.4.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "prep"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
brize_auth = {version="0.11.1", features = ["mysql", "sessions"]} 
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
poem = { version = "2.0.0", features = ["anyhow", "test", "static-files"] }
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tera = "1.19.1"
ureq = { version = "2.8.0", features = ["json"] }
uuid = { version = "1.5.0", features = ["fast-rng", "v4"] }

[dependencies.sqlx]
version="0.7.2"
features = ["mysql", "macros", "uuid", "chrono", "migrate", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1.33.0"
features = ["rt-multi-thread", "macros"]
